Refactor release workflow to clean old SQLite database and ensure schema is up-to-date before migration

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,15 +24,27 @@ jobs:
             - name: Install dependencies
               run: bun install
 
-            - name: Remove old SQLite file
+            - name: Clean old SQLite database
               run: |
-                  echo "🧹 Removing old SQLite database file..."
-                  rm -f ./bible.sqlite
+                  echo "🧹 Removing old SQLite database..."
+                  rm -f bible.sqlite
+                  rm -rf drizzle/migrations/.snapshot 2>/dev/null || true
+                  ls -lh
+
+            - name: Generate migration (ensure schema up-to-date)
+              run: |
+                  echo "🧩 Generating new migration..."
+                  bunx drizzle-kit generate:sqlite --config=drizzle.config.ts
+              env:
+                  DATABASE_URL: file:./bible.sqlite
 
             - name: Run DB Schema Migration
               run: |
-                  echo "🏗️ Running Drizzle schema migration..."
-                  bunx drizzle-kit push
+                  echo "🏗️ Applying Drizzle migrations..."
+                  bunx drizzle-kit push --config=drizzle.config.ts
+                  echo "✅ Migration completed."
+                  echo "🗂️ Tables after migration:"
+                  sqlite3 bible.sqlite "SELECT name FROM sqlite_master WHERE type='table';"
               env:
                   DATABASE_URL: file:./bible.sqlite
 
