--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.80.0",
+    "@types/pg": "^8.15.6",
     "better-sqlite3": "^12.4.1",
     "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.7"
+    "drizzle-orm": "^0.44.7",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7"
   }
 }
